--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.0",
     "expo": "~52.0.9",
     "expo-status-bar": "~2.0.0",
+    "nativewind": "^2.0.11",
     "react": "18.3.1",
-    "react-native": "0.76.2"
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-video": "^6.8.0",
+    "react-native-web": "~0.19.13",
+    "expo-av": "~15.0.1",
+    "expo-video": "~2.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
